--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -1138,7 +1138,7 @@ arrives at 14 (starting from 1) in exactly 3 moves equals
 the $(1,14)$-th entry of $T^3.$
 <p><a
 href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
-class="ans" id="lab9">$p_4p_6 + p_5p_5+p_6p_4.$</div></p>
+class="ans" id="lab9">$p_3p_6 + p_4p_5+p_5p_4+p_6p_3.$  [Thanks to Anant Raj for correcting a mistake here.]</div></p>
 
 </p>
 
