--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>August 25, 2025:</strong></dt>
+<dd><p>Corrected the answer to Exercise 13 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Anant Raj.</p>
+</dd>
 <dt><strong>August 20, 2025:</strong></dt>
 <dd><ul>
 <li>Blank hints filled in the <a href="bayes.html" target="naya">conditional probabilty</a> page.</li>
