"video for nipam"

--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -1823,19 +1823,9 @@ class="ans" id="lab37">$\frac{5}{1+2+\cdots+10}.$</div></p>
 </table>
 </center>
 
-<p><a
-href="javascript:hideShow('lab38')"><b>[Hint]</b></a><div
-class="ans" id="lab38">
-Let $A$  be any sequence of distinct  cards
- other than the ace of spades.  Then by a strategy we mean any subset $B\subseteq A$ such that no
-  element of $B$  occurs as a prefix in another distinct element. 
- The interpretation is that we say "next" after sequence of cards seen so far matches some element of $B.$  
 <p></p>
-Now use the hint given. 
-<p></p>
-Another technique (possibly an easier one) is to consider the deck as made of one ace of spade and
- 51 identical dummy cards.  
-</div></p>
+
+<a href="https://youtu.be/nhcusJwHeOw">Video containing a complete discussion</a>
 
 <p></p>
 
@@ -1853,8 +1843,8 @@ Another technique (possibly an easier one) is to consider the deck as made of on
 </center>
 
 <p><a
-href="javascript:hideShow('lab39')"><b>[Hint]</b></a><div
-class="ans" id="lab39">9.</div></p>
+href="javascript:hideShow('lab38')"><b>[Hint]</b></a><div
+class="ans" id="lab38">9.</div></p>
 
 </p>
 ::<p>
@@ -1872,8 +1862,8 @@ In other words, we have a random experiment that can output $1,2,...,m$  with pr
  $p_1,...,p_m.$  The experiment is run $n$  times. What is the chance that the last
  outcome is different from all the earlier ones? 
 <p><a
-href="javascript:hideShow('lab40')"><b>[Hint]</b></a><div
-class="ans" id="lab40">
+href="javascript:hideShow('lab39')"><b>[Hint]</b></a><div
+class="ans" id="lab39">
 Let $A$  be this event. Let $B_i$  be the event that the last coupon is of type $i.$  
 <p></p>
 Then $P(A) = \sum_{i=1}^m P(B_i)P(A|B_i).$
@@ -1900,8 +1890,8 @@ Hence $P(A) = \sum_{i=1}^m p_i (1-p_i)^{n-1}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab41')"><b>[Hint]</b></a><div
-class="ans" id="lab41">
+href="javascript:hideShow('lab40')"><b>[Hint]</b></a><div
+class="ans" id="lab40">
 (a) $2p(1-p).$
 <p></p>
 (b) $\binom{3}{1}p^2(1-p),$  because there are three such paths:
@@ -1934,8 +1924,8 @@ class="ans" id="lab41">
 </center>
 
 <p><a
-href="javascript:hideShow('lab42')"><b>[Hint]</b></a><div
-class="ans" id="lab42">
+href="javascript:hideShow('lab41')"><b>[Hint]</b></a><div
+class="ans" id="lab41">
 (a) The procedure may be modelled by this random experiment: toss the coin
 twice, report "Head" if the outcome is HT, report "Tail" if the outcome is TH, and report
  "Failure" otherwise. Then we are to show that the conditional probability that the outcome is
@@ -1970,8 +1960,8 @@ which may not equal $\frac 12.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab43')"><b>[Hint]</b></a><div
-class="ans" id="lab43">You may either list all the paths and then compute the
+href="javascript:hideShow('lab42')"><b>[Hint]</b></a><div
+class="ans" id="lab42">You may either list all the paths and then compute the
 probability of their union using inclusion-exclusion, or you may
 you conditional probability. In the latter approach, you take
 the switches one by one, and consider the cases when it is on and
@@ -1992,8 +1982,8 @@ when it is off. This approach is better for complicated circuits.
 </center>
 
 <p><a
-href="javascript:hideShow('lab44')"><b>[Hint]</b></a><div
-class="ans" id="lab44">
+href="javascript:hideShow('lab43')"><b>[Hint]</b></a><div
+class="ans" id="lab43">
 $A_i=$ {first throw shows $i$ } for $i=2,3,...,12.$
 <p></p>
 Let $p_i = P(A_i).$  
@@ -2019,8 +2009,8 @@ For any other $i$  we have $P(win|A_i) = p_i + (1-p_i-p_7)p_i + (1-p_i-p_7)^2p_i
 </center>
 
 <p><a
-href="javascript:hideShow('lab45')"><b>[Hint]</b></a><div
-class="ans" id="lab45">
+href="javascript:hideShow('lab44')"><b>[Hint]</b></a><div
+class="ans" id="lab44">
 [Thanks to Rishit Garg for correcting a serious mistake here, which has now been corrected.]
 <p></p>
 Intuitive argument for the draw strategy: If you draw a red ball first, then the remaining balls in the urn have an equal
@@ -2057,8 +2047,8 @@ again and again. What is the probability that at the $n$-th
 stage the ball drawn will be red? Does the probability depend
 on $n?$
 <p><a
-href="javascript:hideShow('lab46')"><b>[Hint]</b></a><div
-class="ans" id="lab46">
+href="javascript:hideShow('lab45')"><b>[Hint]</b></a><div
+class="ans" id="lab45">
 Let $X_n$ be the colour of the $n$-th ball drawn. Then 
 $
 \newcommand{\red}{\mathrm{red}}
@@ -2088,8 +2078,8 @@ numbers $m &lt; n.$ What is the probability that the ball
 drawn at stage $m$ is green and the ball drawn at
 stage $n$ is red? Does the answer depend on $m$ and $n$?
 <p><a
-href="javascript:hideShow('lab47')"><b>[Hint]</b></a><div
-class="ans" id="lab47">Proceed just as in the last problem.</div></p>
+href="javascript:hideShow('lab46')"><b>[Hint]</b></a><div
+class="ans" id="lab46">Proceed just as in the last problem.</div></p>
 
 </p>
 
