--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -448,7 +448,7 @@ Show $P(A^c) = 1-P(A).$
 <p></p>
 
 <p>
-<b>EXERCISE 3:</b>&nbsp;If $A_1\subseteq A_2\subseteq A_3,$  then show that $P(A_1\cup A_1\cup A_3) = P(A_1)+P(A_2\cap A_1^c)+P(A_3\cap A_2^c).$</p>
+<b>EXERCISE 3:</b>&nbsp;If $A_1\subseteq A_2\subseteq A_3,$  then show that $P(A_1\cup A_2\cup A_3) = P(A_1)+P(A_2\cap A_1^c)+P(A_3\cap A_2^c).$</p>
 
 <p></p>
 
@@ -755,15 +755,16 @@ Then $P(B_\beta)$ occurs only for those $P(A_\alpha)$'s
 where $\alpha\subseteq\beta.$ 
 <p></p>
 Thus, $P(B_\beta)$ occurs as many times as there are subsets
-of $\beta$ of size $k.$
+of $\beta$ of size $r.$
 <p></p>
 If $|\beta|=k,$ then this number is $\binom{k}{r}.$
 </div>
 More precisely, 
 $$
-\sum_{|\alpha|=r} P(A_\alpha) = \sum_{k=1}^r \binom{k}{r}
+\sum_{|\alpha|=r} P(A_\alpha) = \sum_{k=1}^n \binom{k}{r}
 \sum_{|\beta|=k} P(B_\beta).
 $$
+[Thanks to Sayantan for pointing out a couple of "not so trivial" typos here.]
 <p></p>
 Hence total number of inclusion of a $k$-index $B$ is
 $$
