--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,8 @@
 <html><body>
 <dl>
+<dt><strong>August 31, 2025:</strong></dt>
+<dd><p>Corrected some typos in the <a href="basic.html" target="naya">basic concepts</a> page. Thanks to Sayantan.</p>
+</dd>
 <dt><strong>August 28, 2025:</strong></dt>
 <dd><p>Added a <a href="https://youtu.be/nhcusJwHeOw" target="naya">video</a> providing complete discussion of Exercise 42 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. This is the Ace of Spades problem asked by Nipam.</p>
 </dd>
