--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -1598,13 +1598,13 @@ Let $C=$ the event that the 21-st is the two of clubs.
 <p></p>
 To find $P(B|A)=\frac{P(A\cap B)}{P(A)}$  and $P(C|A)=\frac{P(A\cap C)}{P(A)}.$
 <p></p>
-Here $|A|=4\times 48\times\cdots\times(48-19+1)$, 
+Here $|A|=4\times 48\times\cdots\times(48-19+1)\times 32!$, 
 <p></p>
 $|A\cap B| = 1\times 3\times
- 48\times\cdots\times(48-19+1)$  and 
-$|A\cap C| = 1\times 4\times 47\times\cdots\times(47-19+1).$
+ 48\times\cdots\times(48-19+1)\times31!$  and 
+$|A\cap C| = 1\times 4\times 47\times\cdots\times(47-19+1)\times31!.$
 <p></p>
-[Corrected a mistake pointed out by Roshan.]
+[Corrected mistakes pointed out by Roshan and Titas.]
 </div></p>
 
 </p>
