--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -1218,11 +1218,13 @@ We are defining $T_i = S_i-S_{i-1}$  for $i=1,...,5$  where $S_0=0.$
 Then the $T_i$'s are independent random variables. 
 <p></p>
 $T_1$  is degenerate at 1,  and for $i=2,...,5$  we have
-$$P(T_i = k) = q_i^{k-1}p_i$$  for $k\in{\mathbb N}$  where $p_i = \frac{i-1}{5}$  and $q_i = 1-p_i.$
+$$P(T_i = k) = q_i^{k-1}p_i$$  for $k\in{\mathbb N}$  where $q_i = \frac{i-1}{5}$  and $p_i = 1-q_i.$
 <p></p>
 We can easily find $E(T_i)$'s. 
 <p></p>
 The answer to the problem is $E(T_1+\cdots+T_5) = 1+E(T_2)+\cdots+E(T_5).$
+<p></p>
+[Thanks to Nipam for correcting a mistake here.]
 </div></p>
 
 </p>
