--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,6 +2,7 @@
 <dl>
 <dt><strong>August 31, 2025:</strong></dt>
 <dd><ul>
+<li>Corrected a mistake in the solution of Exercise 23 in the <a href="exp.html" target="naya">Expectation</a> page. Thanks to Nipam.</li>
 <li>Corrected some typos in the <a href="basic.html" target="naya">basic concepts</a> page. Thanks to Sayantan.</li>
 <li>Corrected a serious mistake in the solution of Exercise 31 in the <a href="bayes.html" target="naya">conditional probabilty</a> page. Thanks to Titas.</li>
 </ul>
