--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1865,8 +1865,11 @@ at least one ball of each colour?
 <p><a
 href="javascript:hideShow('lab27')"><b>[Hint]</b></a><div
 class="ans" id="lab27">Let $A_1, A_2, A_3, A_4$  denote the events that (s)he has at least one
- red/green/blue/yellow ball, respectively.  Then you need to find $P(A_1\cup A_2\cup A_3\cup
- A_4)$. Use inclusion-exclusion.  </div></p>
+ red/green/blue/yellow ball, respectively.  Then you need to find $P(A_1\cap A_2\cap A_3\cap
+ A_4)$. Use inclusion-exclusion.  
+<p></p>
+[Thanks to Sayantan for pointing out a serious mistake here. I had written union instead of intersection!]
+</div></p>
 </p>
 
 <h3><a
