--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>September 01, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected a serious mistake in the hint of Exercise 32 in the <a href="basic.html" target="naya">basic concepts</a> page. Thanks to Sayantan.</li>
+</ul>
+</dd>
 <dt><strong>August 31, 2025:</strong></dt>
 <dd><ul>
 <li>Corrected a mistake in the solution of Exercise 23 in the <a href="exp.html" target="naya">Expectation</a> page. Thanks to Nipam.</li>
