--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -958,6 +958,14 @@ This is maximised when $pq = p(1-p)$  is maximised, which is when $p=\frac 12.$
 </tr>
 </table>
 </center>
+<p><a
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
+class="ans" id="lab10">
+(a) $E\big( (2+4X)^2 \big) = 4E(1+4X+4X^2) = 4(1+4E(X)+4E(X^2)) = \cdots$.
+<p></p>
+(b)$ E(X^2+(X+1)^2) = E(2X^2+2X+1) = 2E(X^2)+2E(X)+1 = \cdots$.
+<p></p>
+</div></p>
 </p>
 ::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
@@ -972,8 +980,8 @@ This is maximised when $pq = p(1-p)$  is maximised, which is when $p=\frac 12.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
-class="ans" id="lab10">
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
+class="ans" id="lab11">
 (a) Let $X_i = \left\{\begin{array}{ll}1 &\text{if }i\mbox{-th draw is white}\\ 0&\text{otherwise.}\end{array}\right.$  for $i=1,...,10.$
 <p></p>
 Then $E(X_i) = P(i$-th draw is white$)=\frac{17}{40}.$  
@@ -1001,8 +1009,8 @@ So $E(X) = 17\times \frac 14 = \frac{17}{4}.$
 </table>
 </center>
 <p><a
-href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
-class="ans" id="lab11">
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
+class="ans" id="lab12">
 Let $X_i$  be as given in the hint. 
 <p></p>
 Let $X = $ number of intact marriages.
@@ -1027,8 +1035,8 @@ So $E(X) = \frac{150\times149}{2\times199}.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
-class="ans" id="lab12">
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
+class="ans" id="lab13">
 $E(X) = \frac 52.$
 </div></p>
 
@@ -1047,8 +1055,8 @@ $E(X) = \frac 52.$
 Here we assume that $E(X)$  exists finitely. The inequality holds even if 
 $E(X^2)$  is not finite (with the interpretation that $\forall a\in{\mathbb R}~~\infty \geq a$.)
 <p><a
-href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
-class="ans" id="lab13">
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
+class="ans" id="lab14">
 You may either use Jensen's inequality with the convex function $f(x)=x^2$  or the fact that $V(X)\geq 0.$
 <p></p>
 Equality if and only if $V(X)= 0$, <i>i.e.</i>, if $X$  is a degenerate random variable.
@@ -1072,8 +1080,8 @@ You may use some approximations in parts (c) and (d) of this problem. For instam
  $\frac nk$  groups of $k$  patients each, even if $\frac nk$  is not an integer. You
  may also differentiate w.r.t. $k.$ 
 <p><a
-href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
-class="ans" id="lab14">(a) $1-(1-p)^k.$
+href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
+class="ans" id="lab15">(a) $1-(1-p)^k.$
 <p></p>
 (b) For a group of size $k$  the random variable $X$  takes the value 
 $k+1$  with probability $1-(1-p)^k$  and the value $1$  with probability $(1-p)^k.$  
@@ -1109,8 +1117,8 @@ $$-\frac{1}{k^2}-(1-p)^k\log(1-p).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab15')"><b>[Hint]</b></a><div
-class="ans" id="lab15">
+href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
+class="ans" id="lab16">
 Here $P(X=k) = \binom{k-1}{r-1}p^rq^{k-r}$  for $k=r,r+1,...$  where $q = 1-p.$
 <p></p>
 So 
@@ -1138,8 +1146,8 @@ You may like to deal with the $r=1$  case first.
 </center>
 
 <p><a
-href="javascript:hideShow('lab16')"><b>[Hint]</b></a><div
-class="ans" id="lab16">Let $X = $ the number of trials needed to get the first 6. 
+href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
+class="ans" id="lab17">Let $X = $ the number of trials needed to get the first 6. 
 <p></p>
 Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
 <p></p>
@@ -1166,8 +1174,8 @@ Put $x=\frac 56$  to find the required expectation.
 </center>
 
 <p><a
-href="javascript:hideShow('lab17')"><b>[Hint]</b></a><div
-class="ans" id="lab17">
+href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
+class="ans" id="lab18">
 Assuming the dice to be fair, the answer does not depend on the number 
 the gambler bets on. 
 <p></p>
@@ -1201,8 +1209,8 @@ $$E(X) = \left(\frac 16\right)^3(5^3-3\times 5^2-6\times5-3).$$
 </center>
 
 <p><a
-href="javascript:hideShow('lab18')"><b>[Hint]</b></a><div
-class="ans" id="lab18">
+href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
+class="ans" id="lab19">
 Let $T_1 = 1.$
 <p></p>
 Let $T_i = $  waiting time for the $i$-th new coupon after the $(i-1)$-th coupon has been encountered, for
@@ -1241,8 +1249,8 @@ The answer to the problem is $E(T_1+\cdots+T_5) = 1+E(T_2)+\cdots+E(T_5).$
 </center>
 
 <p><a
-href="javascript:hideShow('lab19')"><b>[Hint]</b></a><div
-class="ans" id="lab19">
+href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
+class="ans" id="lab20">
 <center>
 <table width="100%">
 <tr>
@@ -1307,8 +1315,8 @@ Or...use the indicator trick!!!
 </center>
 
 <p><a
-href="javascript:hideShow('lab20')"><b>[Hint]</b></a><div
-class="ans" id="lab20">
+href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
+class="ans" id="lab21">
 Let there be $n$  workers. Let $X$  be the number of working days. 
 <p></p>
 Let $X_i=\left\{\begin{array}{ll}1&\text{if }i\mbox{-th day is a working day}\\ 0&\text{otherwise.}\end{array}\right..$
@@ -1347,8 +1355,8 @@ So the function is maximised at $n=364$  and $365.$
 </center>
 
 <p><a
-href="javascript:hideShow('lab21')"><b>[Hint]</b></a><div
-class="ans" id="lab21">
+href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
+class="ans" id="lab22">
 Let $X=$ number of cards required to be turned. 
 <p></p>
 Then $P(X=k)=\frac{4\times {}^48P_{k-1}(52-k)!}{52!}.$
