--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,7 +2,8 @@
 <dl>
 <dt><strong>September 01, 2025:</strong></dt>
 <dd><ul>
-<li>Corrected a serious mistake in the hint of Exercise 32 in the <a href="basic.html" target="naya">basic concepts</a> page. Thanks to Sayantan.</li>
+<li><p>Added hints to all the exercises in the <a href="rv.html" target="naya">Random variables</a> page.</p></li>
+<li><p>Corrected a serious mistake in the hint of Exercise 32 in the <a href="basic.html" target="naya">basic concepts</a> page. Thanks to Sayantan.</p></li>
 </ul>
 </dd>
 <dt><strong>August 31, 2025:</strong></dt>
