--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -838,22 +838,19 @@ Hence $P(X=1) = F(1)-F(1-).$
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
+class="ans" id="lab5">
+$P(|X-1|\geq 2) = P(X\leq 0\mbox{ or }X\geq 3) = P(X\leq 0) + P(X\geq 3) = P(X\leq 0) +
+ P(X \gt 3)+P(X=3) = F_X(0)+1-F_X(3)+P(X=3) =F_X(0)+1-F_X(3),$
+since $P(X=3)=0$.</div></p>
+
 </p>
 In all the following problems the term "density" stands for "PMF".
+<p></p>
 ::<p>
 <b>EXERCISE 6:</b>&nbsp;<center>
-<table width="100%">
-<tr>
-<th><img width="" src="image/hpsrv2.png"></th>
-</tr>
-<tr>
-<th></th>
-</tr>
-</table>
-</center>
-</p>
-::<p>
-<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv3.png"></th>
@@ -863,9 +860,22 @@ In all the following problems the term "density" stands for "PMF".
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab6')"><b>[Hint]</b></a><div
+class="ans" id="lab6">
+(b) $X$  can take values $0,1,...,n$.  We have 
+$$P(X=k) = \binom{n}{k} \left(\frac 35\right)^k \left(\frac 25\right)^{n-k}$$  for $k=0,1,...,n$.
+The PMF is zero otherwise. 
+<p></p>
+(a) Here $n$  ca be at most 10. For $k=0,...,6$  we have
+$$P(X=k) = \frac{\binom{6}{k}\binom{4}{n-k}}{\binom{10}{k}}. $$
+Here we have the understanding that $\binom{n}{r} = 0$  if $r\not\in\{0,1,...,n\}$. 
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<center>
+<b>EXERCISE 7:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv4.png"></th>
@@ -875,9 +885,17 @@ In all the following problems the term "density" stands for "PMF".
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab7')"><b>[Hint]</b></a><div
+class="ans" id="lab7">For this to be a PMF we need $f(1)+\cdots+f(N)=1$.
+<p></p>
+So $c(2+2^2+\cdots 2^N) = 1$. 
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<center>
+<b>EXERCISE 8:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv5.png"></th>
@@ -887,9 +905,24 @@ In all the following problems the term "density" stands for "PMF".
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab8')"><b>[Hint]</b></a><div
+class="ans" id="lab8">
+(a) $P(X&lt;0) = f(-3)+f(-1) = 0.1 + 0.2 = 0.3$.
+<p></p>
+(b) $f(0)+f(2) +f(8) = 0.15+0.1+0.05$.
+<p></p>
+(c) $f(1)+f(2)+f(3)+f(5)+f(8) = 0.2+0.1+0.15+0.05+0.05 = $
+<p></p>
+(d) $P(X=-3|X\leq 0)= \frac{P(X=-3 \&amp; X\leq 0)}{P(X\leq 0)} =  \frac{P(X=-3)}{P(X\leq 0)} = \frac{f(-3)}{f(-3)+f(-1)+f(0)} = $
+<p></p>
+(e) $P(X\geq 3| X &gt; 0) = \frac{P(X\geq 3 \&amp; X &gt; 0)}{P(X &gt; 0)} = \frac{P(X\geq 3)}{P(X&gt;0)}= \frac{f(3)+f(5)+f(8)}{f(1)+f(2)+f(3)+f(5)+f(8)}.$
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<center>
+<b>EXERCISE 9:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv6.png"></th>
@@ -899,9 +932,32 @@ In all the following problems the term "density" stands for "PMF".
 </tr>
 </table>
 </center>
+
+<p></p>
+Here they mean an SRSWR of size 2.
+<p><a
+href="javascript:hideShow('lab9')"><b>[Hint]</b></a><div
+class="ans" id="lab9">
+Clearly $X$  can take values in $\{1,2,...,12\}$.
+<p></p>
+So if $k\not\in\{1,2,...,12\}$, then $P(X=k) = 0$.
+<p></p>
+Now let $k\in\{1,2,...,12\}$.
+<p></p>
+Let the first number be $X_1$  and the second be $X_2$
+<p></p>
+Then $P(X\leq k) = P(X_1\leq k \&amp; X_2\leq k) = P(X_1\leq k)P(X_2\leq k) = \left(\frac{k}{12}\right)^2$.
+<p></p>
+Actually this formula also holds for $k=0$.
+<p></p>
+So for $k\in\{1,2,...,12\}$  we have 
+$$P(X=k)= P(X\leq k)-P(X\leq k-1) = \frac{k^2-(k-1)^2}{144},$$
+which is the required PMF. 
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<center>
+<b>EXERCISE 10:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsrv7.png"></th>
@@ -911,6 +967,22 @@ In all the following problems the term "density" stands for "PMF".
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab10')"><b>[Hint]</b></a><div
+class="ans" id="lab10">
+(a) Of course we assume that $n\leq r$. 
+<p></p>
+Then $P(Y\leq y) = 0$  if $y &lt; 1$  and also
+ $P(Y\leq y) = 1$  if $y\geq r$. 
+<p></p>
+Let $y\in [1,r)$. Then $\{Y\leq y\}$  means all the balls are from $\{1,...,[y]\}$. 
+<p></p>
+This has probability $\frac{\binom{[y]}{n}}{\binom{r}{n}}$. 
+<p></p>
+(b) Similar. 
+</div></p>
+
 </p>
 The nex two problems refer to the following CDF:
 <center>
@@ -924,7 +996,7 @@ The nex two problems refer to the following CDF:
 </table>
 </center>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<center>
+<b>EXERCISE 11:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore2.png"></th>
@@ -934,9 +1006,17 @@ The nex two problems refer to the following CDF:
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab11')"><b>[Hint]</b></a><div
+class="ans" id="lab11">
+$F(m) = \frac 12$  means $1-e^{- \lambda m} = \frac 12$, or 
+$m = \frac{\log 2}{\lambda}$.
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<center>
+<b>EXERCISE 12:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore3.png"></th>
@@ -946,9 +1026,25 @@ The nex two problems refer to the following CDF:
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
+class="ans" id="lab12">First notice that since $F(x)$  is a continuous function, hence for any given $a\in{\mathbb R}$  e must have $P(X=a) = 0$.
+<p></p>
+So $P(X\geq 0.01) = P(X &gt; 0.01) = 1-F(0.01) = e^{-\lambda/100}$.
+<p></p>
+So we get $e^{-\lambda/100}=\frac 12$  or $\lambda=100\log 2$. 
+<p></p>
+Again, $P(X\geq t) = e^{-\lambda t}$.
+<p></p>
+So we need $e^{-\lambda t} = 0.9$. Hence $t = -\frac{\log 0.9}{\lambda} = -\frac{\log 0.9}{100\log 2}$.
+<p></p>
+This is actually positive, since $\log 0.9 &lt; 0$.
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 14:</b>&nbsp;<center>
+<b>EXERCISE 13:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore4.png"></th>
@@ -958,9 +1054,32 @@ The nex two problems refer to the following CDF:
 </tr>
 </table>
 </center>
+
+<p><a
+href="javascript:hideShow('lab13')"><b>[Hint]</b></a><div
+class="ans" id="lab13">
+(a) $P\left(\frac 12\leq X \leq \frac 32\right) = P\left(X\leq \frac 32\right) - P\left(X &lt; \frac 12\right)
+= P\left(X\leq \frac 32\right)-P\left(X\leq \frac 12\right),$
+since $P\left(X=\frac 12\right) = 0$  as $F(x)$  is continuous at $x=\frac 12$.
+<p></p>
+So the answer is $F\left(\frac 32\right)-F\left(\frac 12\right) = \frac 34-\frac 16=\frac{7}{12}$.
+<p></p>
+(b) $P\left(\frac 12\leq X \leq 1\right) = P\left(X\leq 1\right) - P\left(X &lt; \frac 12\right) = F(1)-P\left(X &lt; \frac 12\right)$. 
+Now proceed as before. 
+<p></p>
+(c) $P\left(\frac 12\leq X &lt; 1\right) = P\left(X&lt; 1\right) - P\left(X &lt; \frac 12\right) = \lim_{x\rightarrow
+ 1-}F(x)-F\left(\frac 12\right) = \frac 13-\frac 16 = \frac 16.$. 
+<p></p>
+(d) $P\left(1\leq X\leq \frac 32\right) = P\left(X\leq\frac 32\right) - P(X &lt; 1) = F\left(\frac 32\right)-\lim_{x\rightarrow1-} F(x) = \frac 34-\frac 13 = \frac{5}{12}$.
+<p></p>
+(e) $P(1 &lt; X &lt; 2) = \lim_{x\rightarrow2-}F(x)-\lim_{x\rightarrow1-}F(x) = 1-\frac 13 = \frac 23$.
+<p></p>
+Actually here $F(x)$  is continuous at $x=2$. 
+</div></p>
+
 </p>
 ::<p>
-<b>EXERCISE 15:</b>&nbsp;<center>
+<b>EXERCISE 14:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/hpsmore5.png"></th>
@@ -981,6 +1100,18 @@ Here are the properties (i)-(iv) from section 5.1.1:
 </tr>
 </table>
 </center>
+Here $F(\pm\infty) = \lim_{x\rightarrow\pm\infty} F(x)$  and $F(x+) = \lim_{t\rightarrow x-} F(t).$
+<p><a
+href="javascript:hideShow('lab14')"><b>[Hint]</b></a><div
+class="ans" id="lab14">
+(a) (i), (ii), (iii) No modification. (iv) $F(x-) = F(x)$  for all $x$. 
+<p></p>
+(b) (i) No modification. (ii) nonincreasing. (iii) $F(-\infty) = 1$  and $F(\infty) = 0$. (iv) No modification.
+<p></p>
+(c) (i) No modification. (ii) nonincreasing. (iii) $F(-\infty) = 1$  and $F(\infty) = 0$. (iv) $F(x-) = F(x)$  for all $x$. 
+</div></p>
+
+<p></p>
 
 </p>
 <hr xmlns="http://www.w3.org/1999/xhtml"/>
