--- a/prob1_2025/bayes.html
+++ b/prob1_2025/bayes.html
@@ -542,9 +542,9 @@ Let $A_1,...,A_n$ be mutually exclusive and exhaustive
 events. Let $B$ be any event. We
 assume $P(A_1),...,P(A_n), P(B)&gt;0.$ Then
 for any $k=1,...,n,$
-$$P(A_k|B) = \frac{P(A_k)P(B|A)}{\sum_{i=1}^n P(A_i)P(B|A_i)}.$$
+$$P(A_k|B) = \frac{P(A_k)P(B|A_k)}{\sum_{i=1}^n P(A_i)P(B|A_i)}.$$
 </fieldset>
-
+[Thanks to Avigyan for pointing out a typo.]
 <p></p>
 ::<p>
 <b>EXERCISE 4:</b>&nbsp;Look at the following diagram and write down the proof.
