--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,9 @@
 <html><body>
 <dl>
+<dt><strong>September 02, 2025:</strong></dt>
+<dd><pre><code>Corrected a typo in the statement of Bayes theorem (version 2).</code></pre>
+<p>Thanks to Avigyan.</p>
+</dd>
 <dt><strong>September 01, 2025:</strong></dt>
 <dd><ul>
 <li><p>Added hints to all the exercises in the <a href="rv.html" target="naya">Random variables</a> page.</p></li>
