--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,8 +1,10 @@
 <html><body>
 <dl>
 <dt><strong>September 02, 2025:</strong></dt>
-<dd><pre><code>Corrected a typo in the statement of Bayes theorem (version 2).</code></pre>
-<p>Thanks to Avigyan.</p>
+<dd><ul>
+<li>Corrected a typo in the statement of Bayes theorem (version 2). Thanks to Avigyan.</li>
+<li>Corrected a typo in the hint for Exercise 4 in the <a href="rv.html" target="naya">Random variables</a> page. Thanks to “Chaitu”.</li>
+</ul>
 </dd>
 <dt><strong>September 01, 2025:</strong></dt>
 <dd><ul>
