--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -842,9 +842,12 @@ Hence $P(X=1) = F(1)-F(1-).$
 <p><a
 href="javascript:hideShow('lab5')"><b>[Hint]</b></a><div
 class="ans" id="lab5">
-$P(|X-1|\geq 2) = P(X\leq 0\mbox{ or }X\geq 3) = P(X\leq 0) + P(X\geq 3) = P(X\leq 0) +
- P(X \gt 3)+P(X=3) = F_X(0)+1-F_X(3)+P(X=3) =F_X(0)+1-F_X(3),$
-since $P(X=3)=0$.</div></p>
+$P(|X-1|\geq 2) = P(X\leq -1\mbox{ or }X\geq 3) = P(X\leq -1) + P(X\geq 3) = P(X\leq -1) +
+ P(X \gt 3)+P(X=3) = F_X(-1)+1-F_X(3)+P(X=3) =F_X(-1)+1-F_X(3),$
+since $P(X=3)=0$.
+<p></p>
+[Thanks to ''Chaitu'' for correcting a typo here.]
+</div></p>
 
 </p>
 In all the following problems the term "density" stands for "PMF".
@@ -1029,7 +1032,7 @@ $m = \frac{\log 2}{\lambda}$.
 
 <p><a
 href="javascript:hideShow('lab12')"><b>[Hint]</b></a><div
-class="ans" id="lab12">First notice that since $F(x)$  is a continuous function, hence for any given $a\in{\mathbb R}$  e must have $P(X=a) = 0$.
+class="ans" id="lab12">First notice that since $F(x)$  is a continuous function, hence for any given $a\in{\mathbb R}$  we must have $P(X=a) = 0$.
 <p></p>
 So $P(X\geq 0.01) = P(X &gt; 0.01) = 1-F(0.01) = e^{-\lambda/100}$.
 <p></p>
