--- a/prob1_2025/indep.html
+++ b/prob1_2025/indep.html
@@ -585,10 +585,10 @@ class="ans" id="lab2">
 Let $f = P($Elmer beats father$),$ and $c =
 P($Elmer beats champion$).$ Then Elmer's chance of
 winning for the father-champion-father case is $2fc(1-f) 
- + +f^2(1-c)+f^2c=A,$ say.
+ +f^2c=A,$ say.
 <p></p>
 The winning probability for the other case is: $2cf(1-c) +
-  c^2f+c^2(1-f)=B,$ say.
+  c^2f=B,$ say.
 <p></p>
 We have $f &gt; c.$ 
 <p></p>
