--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -2,7 +2,7 @@
 <dl>
 <dt><strong>September 02, 2025:</strong></dt>
 <dd><ul>
-<li>Corrected a typo in the statement of Bayes theorem (version 2). Thanks to Avigyan.</li>
+<li>Corrected a typo in the statement of Bayes theorem (version 2). Also the answer to Exercise 36 in the same page. Thanks to Avigyan.</li>
 <li>Corrected a typo in the hint for Exercise 4 in the <a href="rv.html" target="naya">Random variables</a> page. Thanks to “Chaitu”.</li>
 </ul>
 </dd>
