--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1797,10 +1797,12 @@ class="ans" id="lab24">
 Total number of possible outcomes is $n!.$ To find
 total number of favourable outcomes make the other $n-2$
 men stand in a row ($(n-2)!$ ways), take a stretch of
-length $r$ ($n-r+1$ ways), place $A,B$ at two
+length $r$ (can be done in $n-2-r+1 = n-r-1$ ways), place $A,B$ at two
 ends (2 ways). So the required probability
-is $\frac{(n-2)!\times(n-r+1)\times 2}{n!} =
-\frac{2(n-r+1)}{n(n-1)}.$ 
+is $\frac{(n-2)!\times(n-r-1)\times 2}{n!} =
+\frac{2(n-r-1)}{n(n-1)}.$ 
+<p></p>
+[Thanks to Nipam for correcting a mistake here.]
 </div></p>
 </p>
 
