--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,5 +1,10 @@
 <html><body>
 <dl>
+<dt><strong>September 05, 2025:</strong></dt>
+<dd><ul>
+<li>Corrected a mistake in the solution of Exercise 29 in the <a href="basic.html" target="naya">Basic concepts</a> page. Thanks to Nipam.</li>
+</ul>
+</dd>
 <dt><strong>September 02, 2025:</strong></dt>
 <dd><ul>
 <li>Corrected a typo in the statement of Bayes theorem (version 2). Also the answer to Exercise 36 in the same page. Thanks to Avigyan.</li>
