--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1155,7 +1155,7 @@ class="ans" id="lab1">
 
 <li>$E^c\cap F^c\cap G^c.$</li>
 
-<li>$(E\cap F^c\cap G^c)\cup ((E\cap F^c\cap G^c)\cup (E\cap
+<li>$(E\cap F^c\cap G^c)\cup (E\cap F^c\cap G^c)\cup (E\cap
 F^c\cap G^c)\cup (E^c\cap F^c\cap G^c).$ (Can you come up
 with something simpler?)</li>
 
