--- a/prob1_2025/rv.html
+++ b/prob1_2025/rv.html
@@ -1075,9 +1075,11 @@ Now proceed as before.
 <p></p>
 (d) $P\left(1\leq X\leq \frac 32\right) = P\left(X\leq\frac 32\right) - P(X &lt; 1) = F\left(\frac 32\right)-\lim_{x\rightarrow1-} F(x) = \frac 34-\frac 13 = \frac{5}{12}$.
 <p></p>
-(e) $P(1 &lt; X &lt; 2) = \lim_{x\rightarrow2-}F(x)-\lim_{x\rightarrow1-}F(x) = 1-\frac 13 = \frac 23$.
+(e) $P(1 &lt; X &lt; 2) = P(X&lt;2)-P(X\leq1) = \lim_{x\rightarrow2-}F(x)-F(1) = 1-\frac 12 = \frac 12$.
 <p></p>
 Actually here $F(x)$  is continuous at $x=2$. 
+<p></p>
+[Thanks to Avigyan for correcting a silly mistake in the solution to part (e).] 
 </div></p>
 
 </p>
