"simpler expression for basic 6"

--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1156,8 +1156,10 @@ class="ans" id="lab1">
 <li>$E^c\cap F^c\cap G^c.$</li>
 
 <li>$(E\cap F^c\cap G^c)\cup (E\cap F^c\cap G^c)\cup (E\cap
-F^c\cap G^c)\cup (E^c\cap F^c\cap G^c).$ (Can you come up
-with something simpler?)</li>
+F^c\cap G^c)\cup (E^c\cap F^c\cap G^c).$ A student has come up with a simpler expression: 
+$(E^c\cup F^c)\cap (F^c\cup G^c)\cap (G^c\cup E^c)$.
+(Can you come up
+with something even simpler?)</li>
 
 <li>$(E\cap F\cap G)^c.$</li>
 
