--- a/prob1_2025/basic.html
+++ b/prob1_2025/basic.html
@@ -1942,7 +1942,9 @@ even $b$ it is $r=15,$ $b=6.$</div></p>
 </center>
 <p><a
 href="javascript:hideShow('lab30')"><b>[Hint]</b></a><div
-class="ans" id="lab30">$\frac{13!}{52!}\approx 10^{-60}.$
+class="ans" id="lab30">$\frac{4\times13!\times39!}{52!}\approx 6\times10^{-12}.$
+<p></p>
+[Thanks to Titeer for correcting a mistake here.]
 </div></p>
 </p>
 
