--- a/prob1_2025/exp.html
+++ b/prob1_2025/exp.html
@@ -802,7 +802,7 @@ Then
 $$\begin{eqnarray*}
 P(X\geq 1) &amp; = &amp; p_1 + p_2 + p_3+\cdots\\
 P(X\geq 2) &amp; = &amp; \phantom{p_1 +} p_2 + p_3+\cdots\\
-P(X\geq 1) &amp; = &amp; \phantom{p_1 + p_2 +} p_3+\cdots\\
+P(X\geq 3) &amp; = &amp; \phantom{p_1 + p_2 +} p_3+\cdots\\
 \cdots
 \end{eqnarray*}$$
 Now add columnwise. Non-negative series do not change value when 
@@ -1359,9 +1359,23 @@ href="javascript:hideShow('lab22')"><b>[Hint]</b></a><div
 class="ans" id="lab22">
 Let $X=$ number of cards required to be turned. 
 <p></p>
-Then $P(X=k)=\frac{4\times {}^48P_{k-1}(52-k)!}{52!}.$
+Then $P(X=k)=\frac{4\times {}^{48}P_{k-1}(52-k)!}{52!}.$
 <p></p>
-So
+So you can now find $E(X) = \sum_{k=1}^{49} k P(X=k)$. 
+<p></p>
+But here is a smarter solution (taken from Mosteller's book and also given by a student via Whatsapp):
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/mostsol.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+
+<p></p>
 </div></p>
 
 </p>
