--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,7 +1,10 @@
 <html><body>
 <dl>
 <dt><strong>September 10, 2025:</strong></dt>
-<dd><p>Corrected a mistake in the solution to Exercise 35 in the <a href="basic.html" target="naya">Basic concepts</a> page. Thanks to Titeer.</p>
+<dd><ul>
+<li><p>Corrected a mistake in the solution to Exercise 35 in the <a href="basic.html" target="naya">Basic concepts</a> page. Thanks to Titeer.</p></li>
+<li><p>Added a smart solution to Exercise 28 in the <a href="exp.html" target="naya">Expectation</a> page.</p></li>
+</ul>
 </dd>
 <dt><strong>September 05, 2025:</strong></dt>
 <dd><ul>
