--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -1,4 +1,7 @@
 <html><body>
+<p><strong>September 15, 2025:</strong> - Added proof of a theorem regarding expectation of max in the <a href="exp.html" target="naya">Expectation</a> page.</p>
+<pre><code>  - Also added an example of a random variable with undefined expectation
+in the same page. The example is thanks to Bodhisatva. </code></pre>
 <dl>
 <dt><strong>September 10, 2025:</strong></dt>
 <dd><ul>
