--- a/prob1_2025/news.html
+++ b/prob1_2025/news.html
@@ -3,7 +3,7 @@
 <dt><strong>September 15, 2025:</strong></dt>
 <dd><ul>
 <li><p>Added proof of a theorem regarding expectation of max in the <a href="exp.html" target="naya">Expectation</a> page.</p></li>
-<li><p>Also added an example of a random variable with undefined expectation in the same page. The example is thanks to Bodhisatva.</p></li>
+<li><p>Also added an example (Example 1) of a random variable with undefined expectation in the same page. The example is thanks to Bodhisatva.</p></li>
 </ul>
 </dd>
 <dt><strong>September 10, 2025:</strong></dt>
